scribble-test/src/test/resources/good/misc/globals/gdo/Do03.scr
module good.misc.globals.gdo.Do03;


global protocol Do3(role A, role B)
{
	l1() from A to B;
	do Do3a(A, B);
}

global protocol Do3a(role C, role D)
{
	l2() from C to D;
	do Do3b(C, D);
}

global protocol Do3b(role E, role F)
{
	//l3() from A to B;  // Uncomment is bad
	l3() from E to F;
}
