scribble-test/src/test/resources/bad/syntax/disamb/roledecl/Do13a.scr
module bad.syntax.disamb.roledecl.Do13a;


global protocol Do13a(role A, role B)
{
	//l1() from A to B;  // Uncomment is OK
	do Do13a(A, B);
	//l1() from A to B;  // Uncomment is bad
}
